package com.naosim.dddwork.domain.workdateandtime;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@RequiredArgsConstructor
public class WorkDate {
    @Getter
    private final String value;
}
